# YMSL

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.ymsl/: config.json
src-tauri/.ymsl/temp/: java.tmp.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: animation.css  color.css  color.less
src/components/!Home/: Group.vue  LaunchButton.vue
src/components/!Settings/: JavaSettingItem.vue  Sidebar.vue  SidebarItem.vue
src/components/Icon/: Logo.vue
src/components/public/: Card.vue  MiniButton.vue
src/components/public/Titlebar/: Bar.vue  Button.vue
src/pages/: Home.vue  LSettings.vue
src/plugins/: router.js  stores.js
src/plugins/common/: FileHandler.js  Java.js
