[package]
name = "ymsl"
version = "0.1.0"
description = "Yun MC Server Launcher"
authors = ["LingyunAwA"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-execute", "path-all", "fs-read-dir", "fs-write-file", "fs-read-file", "fs-exists", "window-unmaximize", "window-maximize", "window-close", "window-center", "window-hide", "window-create", "window-set-fullscreen", "window-set-focus", "window-set-min-size", "window-set-max-size", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
